# TraderAgents-simplified

./: IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  README.md  pyproject.toml  test_improved_logic.py
docs/: BUILD_INSTRUCTIONS.md  README.md  TraderAgents_Documentation.tex
pipeline_tests/: bearish_pipeline.py  bullish_pipeline.py  full_pipeline.py  full_researcher_pipeline.py  researcher_trader_pipeline.py
src/agents/analyst_team/: __init__.py  base.py  fundamentals_analyst.py  news_analyst.py  sentiment_analyst.py  technical_analyst.py
src/agents/researcher_team/: __init__.py  base.py  bearish_researcher.py  bullish_researcher.py  debate_coordinator.py
src/agents/risk_management_team/: __init__.py  aggressive_debater.py  base.py  conservative_debater.py  debate_coordinator_agent.py  neutral_debater.py  summarizer_risk_management.py
src/agents/trader_agents/: __init__.py  trader_agent.py
src/complete_pipeline/: complete_pipeline.py
src/config/: __init__.py  decision_weights.py
src/schemas/analyst_schemas/: __init__.py  fundamentals_analyst_schema.py  news_analyst_schema.py  sentiment_analyst_schema.py  technical_analyst_schema.py
src/schemas/final_pipeline_schema/: __init__.py  state_schema.py
src/schemas/researcher_schemas/: __init__.py  bearish_researcher_schema.py  bullish_reseacher_schema.py  debate_schema.py
src/schemas/risk_manager_schemas/: risk_manager_schema.py  summarizer_schema.py
src/schemas/trader_agent_schemas/: __init__.py  trader_agent_schema.py
test/agents/analyst_team/: test_fundamentals_analyst.py  test_news_analyst.py  (+2 more)
(+9 files in other folders)
